# pq-fast-scan

./: CMakeLists.txt  LICENSE  README.md  benchmark.cpp  benchmark.hpp  binheap.cpp  binheap.hpp  common.cpp  common.hpp  config.h.in  perfevents.cpp  perfevents.hpp
pqfastscan/: fastscan.cpp  fastscan.hpp  layout.cpp  layout.hpp  pqfastscan.cpp
pqscan/: populate.cpp  populate.hpp  pqscan.cpp  scan_avx.cpp  scan_avx.hpp  scan_gather.cpp  scan_gather.hpp  scan_naive.cpp  scan_naive.hpp  scan_sse.cpp  scan_sse.hpp
